added nowrap to hsp table

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -1659,17 +1659,17 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
    <TABLE id="hsp_result_table" cellspacing="2" class="resultborder" style="overflow: auto;">
      <!--<caption>HSPs w/o overlapping features:</caption>-->
      <THEAD>
-      <TR align=middle>
-        <TH class=small>click to sort &rarr;</TH>
-        <TH class=header>Org</TH>
-        <TH class=header>Chr</TH>
- 	<TH class="header" >Position</TH>	
-        <TH class=header>HSP No.</TH>
-        <TH class=header>E-value</TH>
-        <TH class=header>Perc ID</TH>
-        <TH class=header>Score</TH>
-        <TH class=header>Closest Feature</TH>
-        <TH class=header>Distance</TH>
+      <TR nowrap align=middle>
+        <TH nowrap class=small>click to sort &rarr;</TH>
+        <TH nowrap class=header>Org</TH>
+        <TH nowrap class=header>Chr</TH>
+ 	<TH nowrap class="header" >Position</TH>	
+        <TH nowrap class=header>HSP No.</TH>
+        <TH nowrap class=header>E-value</TH>
+        <TH nowrap class=header>Perc ID</TH>
+        <TH nowrap class=header>Score</TH>
+        <TH nowrap class=header>Closest Feature</TH>
+        <TH nowrap class=header>Distance</TH>
        </TR>
      </THEAD>
      <TBODY id=hsp_result_table_body style="overflow: auto;">
