--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -119,15 +119,12 @@ function update_checkbox(name, dist, hspid, id){
   $('#feat'+hspid).html(name);
   $('#dist'+hspid).html(dist);
   
-  if(dist == "overlapping")
-  {
 //        console.log(name+" "+id);  
   	var id_array = new Array();
   	id_array = id.split(',');
 //  console.log(	id_array[0]+"::"+id_array[1]);
   	$('#checkbox'+id_array[0]).attr("id","checkbox"+id_array[1]);
   	$('#'+id_array[0]).attr("value",id_array[1]).attr("id",id_array[1]);
-  }
 }  
 
 function overlap_checkboxes() {
@@ -144,7 +141,7 @@ function overlap_checkboxes() {
     export_fasta_file(['args__'+accn,'args__'+pageObj.basename],[export_file]);
   }
   else if (action == "xls"){
-    generate_excel_feature_file(['args__'+accn,'args__'+pageObj.basename],[export_file]);
+    export_to_excel(['args__'+accn,'args__'+pageObj.basename],[export_file]);
   }
   else if(action == "tab"){
     generate_tab_deliminated(['args__'+accn,'args__'+pageObj.basename],[export_file]);
