updated page text

--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -103,7 +103,7 @@ login(['uname', 'pwd','url'],[place_cookie]);
 <div id=main style="display: none">
 <TMPL_IF NAME="LOGIN">
 <DIV id="message"><TMPL_VAR NAME="MESSAGE"></DIV>
-<DIV class=large>Please log on: <font class="small">(You will need make sure your browser is set to accept <a href="http://en.wikipedia.org/wiki/HTTP_cookie">cookies</a>)</font></div>
+<DIV class=large>Please log on: <font class="small">(You will need make sure to set <a href="http://www.mozilla.com/firefox/">Firefox</a> accept <a href="http://en.wikipedia.org/wiki/HTTP_cookie">cookies</a>)</font></div>
 <TABLE class="basic">
  <TR>
   <TD>User Name:
@@ -120,7 +120,9 @@ login(['uname', 'pwd','url'],[place_cookie]);
 <br>
 <br>
 
-<div style="width: 600px"><div align=center><img src="/CoGe/picts/gevo-synteny.png" width=500px></div><div align = center class="small species">GEvo analysis of syntenic regions of Arabidopsis derived from its most recent genome duplication event.</div>Welcome to CoGe.  CoGe is a comparative genomics platform designed to allow easy access to genomic data from any organism and provide analysis tools for finding homologous sequences and comparing multiple genomic regions.  There are several ways to access data using CoGe and when you login, you will be presented with a carousel displaying or list of CoGe's tools.  If you are new to CoGe, we recommending reading <a href="/CoGe/docs/help/CoGe_Maize/Maize_Comparative_Genomics.html"> this tutorial</a> for an example of how to use CoGe.  Also, check out the help pages which can be found in the "help" section of the menu bar at the top left of your screen.  The lead developer of the CoGe system is Eric Lyons in the Freeling Lab at UC Berkeley, USA.
+<div style="width: 600px"><div align=center><img src="/CoGe/picts/gevo-synteny.png" width=500px></div><div align = center class="small species">GEvo analysis of syntenic regions of Arabidopsis derived from its most recent genome duplication event.</div>Welcome to CoGe.  CoGe is a comparative genomics platform designed to allow easy access to genomic data from any organism and provide analysis tools for finding homologous sequences and comparing multiple genomic regions.  There are several ways to access data using CoGe.  When you login, you will be presented with a carousel displaying a list of CoGe's tools.  If you are new to CoGe, we recommending reading <a href="/CoGe/docs/help/Tutorials/Tutorials.html">one of our tutorials</a> for examples of how to use CoGe.  Also, check out the help pages which can be found in the "help" section of the menu bar at the top left of your screen.  The lead developer of the CoGe system is Eric Lyons in the Freeling Lab at UC Berkeley, USA.
+<br><br>
+To obtain pre-made lists of syntenic gene sets with links for GEvo analyses, please visit our <a href="/CoGe/docs/help/Precomputed_menus_and_lists/CoGe_menus.html">downloads page</a> (also available on the menu bar).
 </div>
 
 </TMPL_IF>
