updated TITLE for page

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <meta http-equiv="Pragma" content="no-cache">
- <TITLE><TMPL_VAR NAME=TITLE></TITLE>
+ <TITLE>CoGe: <TMPL_VAR NAME=TITLE></TITLE>
  <link rel="stylesheet" type="text/css" href="/CoGe/css/styled.css" />
 
 <TMPL_UNLESS NAME="NO_JQUERY">
