changed default blastn wordsize to 7, removed linear gap costs because they are used for megablast

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -879,7 +879,7 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
 	   Word size
 	</TD>
 	<TD>
-	 <input type=text id=word_size value="8" size="7">
+	 <input type=text id=word_size value="7" size="7">
        </TR>
        <TR>
 	<TD>
@@ -887,8 +887,8 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
        </TD>
 	<TD>
 	  <select id="gapcosts_1-2" class="gapcosts" style="display: block">
-	  	<option value = "0 0"  >Linear</option>   
-		<option value = "5 2"  >Existence:  5 Extension: 2</option>				
+<!--	  	<option value = "0 0"  >Linear</option>   -->
+		<option value = "5 2"  selected>Existence:  5 Extension: 2</option>				
 		<option value = "2 2"  >Existence:  2 Extension: 2</option>				
 		<option value = "1 2"  >Existence:  1 Extension: 2</option>
 		<option value = "0 2"  >Existence:  0 Extension: 2</option>
@@ -897,7 +897,7 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
 		<option value = "1 1"  >Existence: 1 Extension: 1</option>				
 	</select>
 	<select id="gapcosts_1-3" class="gapcosts" style="display: none">
-		<option value = "0 0" >Linear</option>   
+<!--		<option value = "0 0" >Linear</option>    -->
 		<option value = "5 2" >Existence:  5 Extension: 2</option>				
 		<option value = "2 2"  >Existence:  2 Extension: 2</option>		
 		<option value = "1 2"  >Existence:  1 Extension: 2</option>		
@@ -907,7 +907,7 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
 	</select>
 
 	<select id="gapcosts_1-4" class="gapcosts" style="display: none">
-		<option value = "0 0" >Linear</option>   
+<!--		<option value = "0 0" >Linear</option>    -->
 		<option value = "5 2" >Existence:  5 Extension: 2</option>					
 		<option value = "1 2"  >Existence:  1 Extension: 2</option>		
 		<option value = "0 2"  >Existence:  0 Extension: 2</option>		
@@ -915,7 +915,7 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
 		<option value = "1 1"  >Existence: 1 Extension: 1</option>	
 	</select>
 	<select id="gapcosts_2-3" class="gapcosts" style="display: none">
-		<option value = "0 0" >Linear</option>   
+<!--		<option value = "0 0" >Linear</option>    -->
 		<option value = "4 4"  >Existence:  4 Extension: 4</option>		
 		<option value = "2 4"  >Existence:  2 Extension: 4</option>		
 		<option value = "0 4"  >Existence:  0 Extension: 4</option>		
@@ -926,7 +926,7 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
 		<option value = "2 2"  >Existence:  2 Extension: 2</option>				
 	</select>
 	<select id="gapcosts_4-5" class="gapcosts" style="display: none">
-		<option value = "0 0" >Linear</option>   
+<!--		<option value = "0 0" >Linear</option>   -->
 		<option value = "12 8" >Existence:  12 Extension: 8</option>		
 		<option value = "6 5"  >Existence:  6 Extension: 5</option>		
 		<option value = "5 5"  >Existence:  5 Extension: 5</option>		
