turned query sequence filtering on by default

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -1001,7 +1001,7 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
 	 </tr>
 	 <TR> 
 	  <td>Filter query sequence:
-	  <td><label><input class="backbox" type="radio" name="filter_query" id="filter_query" value="T" />Yes</label><label><input class="backbox" type="radio" name="filter_query" id="filter_query" value="F" checked />No</label>
+	  <td><label><input class="backbox" type="radio" name="filter_query" id="filter_query" value="T"  checked />Yes</label><label><input class="backbox" type="radio" name="filter_query" id="filter_query" value="F"/>No</label>
 <!--	<TR>
 	 <TD>
  	 Visualize HSP Results by:
