added support for user config of hsp limit

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -332,7 +332,7 @@ function get_params(){
 
   var filter_query = 0;
   if ($('#filter_query')[0].checked) {filter_query=1;}
-
+  var reslimit = $('#resultslimit').val();
 //blastz parameters
  var zwordsize = $('#blastz_wordsize').val();
  var zgap_start = $('#blastz_gap_start').val();
@@ -343,7 +343,7 @@ function get_params(){
  
  var comp = $('#comp_adj').val();
  var seq = $('#seq_box').val();
- return {w : word_size, e : expect,g : gapcost,p : program,mm: match_mismatch,m : matrix,c : comp,s : seq, zw : zwordsize, zgs : zgap_start, zge : zgap_extension, zc : zchaining, zt : zthreshold, zm : zmask, fq : filter_query};
+ return {w : word_size, e : expect,g : gapcost,p : program,mm: match_mismatch,m : matrix,c : comp,s : seq, zw : zwordsize, zgs : zgap_start, zge : zgap_extension, zc : zchaining, zt : zthreshold, zm : zmask, fq : filter_query, rl : reslimit};
 }
 
 function get_ncbi_params(){
@@ -390,6 +390,7 @@ function blastOff(){
   gapcost = params.g;
   seq = params.s;
   filter_query = params.fq;
+  resultslimit = params.rl;
 //blastz params
  var zwordsize = params.zw;
  var zgap_start = params.zgs;
@@ -413,6 +414,7 @@ function blastOff(){
   'args__matchscore','args__'+match_score,
   'args__gapcost','args__'+gapcost,
   'args__filter_query','args__'+filter_query,
+  'args__resultslimit','args__'+resultslimit,
 
   'args__zwordsize','args__'+zwordsize,
   'args__zgap_start','args__'+zgap_start,
@@ -1002,6 +1004,9 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
 	 <TR> 
 	  <td>Filter query sequence:
 	  <td><label><input class="backbox" type="radio" name="filter_query" id="filter_query" value="T"  checked />Yes</label><label><input class="backbox" type="radio" name="filter_query" id="filter_query" value="F"/>No</label>
+	<TR>
+	  <td> Limit results to:
+	  <td><input type=text id="resultslimit" value="200" size="5"> per organism
 <!--	<TR>
 	 <TD>
  	 Visualize HSP Results by:
@@ -1679,7 +1684,7 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
    
 <TMPL_IF NAME="RESULT_TABLE">
    <div id=table_size style="max-height: 340px;">
-   <table><tr><td>Total Number of HSPs: <TMPL_VAR NAME=HSP_COUNT></table>
+   <table><tr><td>HSP count: <TMPL_VAR NAME=HSP_COUNT></table>
    <div id="null"><TMPL_VAR NAME=NULLIFY></div>
    <TMPL_IF NAME="HSP_TABLE">
    <TABLE id="hsp_result_table" cellspacing="2" class="resultborder" style="overflow: auto;">
