--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -49,8 +49,9 @@
              color:orange;
         }
     </style>
+<!--    <script src = "http://openlayers.org/api/2.6/OpenLayers.js"></script>-->
+
     <script src="js/OpenLayers.js"></script>
-    <script src="js/Grid1D.js"></script>
     <script src="js/Genomic.js"></script>
     <script src="js/opengenes.js"></script>
 
@@ -69,6 +70,7 @@
         var ds = '<TMPL_VAR NAME=DS>';
         var loc = '<TMPL_VAR NAME=LOC>';
         var zoom = '<TMPL_VAR NAME=ZOOM>';
+	zoom++;
         function init(){
             map = new OpenLayers.GenomeBrowser( $('#map')[0] , 
             {   
@@ -149,7 +151,7 @@
             map.events.register('mouseup',map,mapMouseUp);
             map.events.register('mousemove',map,mapMouseMove);
             map.events.register('mouseout',map,mapMouseOut);
-
+	    map.zoomOut();
 
         }
 
