--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -868,7 +868,7 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
       <TABLE>
        <TR>
 	<TD>
-	  E-Value
+	  E-Value:
 	</TD>
 	<TD>
 	    <select name=e_value id=e_value>
@@ -885,7 +885,7 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
        </TR>
        <TR>
 	<TD>
-	   Word size
+	   Word size:
 	</TD>
 	<TD>
 	 <input type=text id=word_size value="7" size="7">
@@ -1684,7 +1684,6 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
    
 <TMPL_IF NAME="RESULT_TABLE">
    <div id=table_size style="max-height: 340px;">
-   <table><tr><td>HSP count: <TMPL_VAR NAME=HSP_COUNT></table>
    <div id="null"><TMPL_VAR NAME=NULLIFY></div>
    <TMPL_IF NAME="HSP_TABLE">
    <TABLE id="hsp_result_table" cellspacing="2" class="resultborder" style="overflow: auto;">
@@ -1878,13 +1877,15 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
         <DIV id=image_info><TMPL_VAR NAME=HSP></DIV>
         </DIV>
       </TD>
-      <TD valign="top" align=right>
-       <DIV id=result_features align=right valign="top">
+      <TD valign="top" align=left>
+       	<DIV id=result_features align=left valign="top">
          <form id=feature_list style="position:static">
          <TMPL_VAR NAME="HSP_RESULTS">
          </form>
+        <table><tr>
+	<td>
           <input type=button id="click_links" value="Show all Features" onClick="click_all_feat_links();$('#click_links').hide(0)"> <input type=button value="Select All" onClick="$('#feature_list').checkCheckboxes()">  <input type=button value="Select None" onClick="$('#feature_list').unCheckCheckboxes()"> 
-         <br><br>
+         <br>
          Do Following to Checked Features: 
           <select name=overlap_action id=overlap_action>
             <option value = "gevo">Send to GEvo</option>
@@ -1895,13 +1896,15 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
 <!--            <option value = "user">Add to MFF</option> -->
           </selected>  
           <input type=button value="Go" onClick="overlap_checkboxes()">
-
+	  <td>HSP count: <TMPL_VAR NAME=HSP_COUNT>
        </DIV>
+ </table>
      </TD>
     <TR>
     <td valign=top><TMPL_VAR NAME="DATA_FILES">
     <td>
     <td align=left id=overlap_box valign="top" class="resultborder">
+    
 
    </TABLE>
    </TD>
