google analytics tracking code

--- a/web/tmpl/footer.tmpl
+++ b/web/tmpl/footer.tmpl
@@ -4,5 +4,14 @@
 <font class = "small">Currently logged in as: <TMPL_VAR NAME=USER> </font><font class="xsmall"><TMPL_VAR NAME=DATE> <a href=index.pl?logout=1>Log Out</a></font>
 </DIV>
 <font class = "small"><span style="color: red;">Warning:</span>  This site uses <a href="http://en.wikipedia.org/wiki/Ajax_(programming)">AJAX</a>.  Don't press your browser's back button!</font>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-3802985-1");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
 </BODY>
 </HTML>
