Page now focuses on accn textbox when page loads

--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -8,6 +8,10 @@
 </HEAD>
 <SCRIPT language="JavaScript">
 
+$(document).ready(function(){
+  $('#accn').focus();
+});
+
 function search_chain(val) {
  $('#data_table').show(0);
  accnminlen = 4;
